# OpenE2140

./: .gitignore  .gitmodules  CMakeLists.txt  Info.plist  LEEME.TXT  README.md  Vagrantfile  build-linux.sh  build-macos.sh  meson.build  pack-macos.sh  pack.sh
data/: attachments.json  buildings.json  factions.json  locales.json  objects.json  units.json  weapons.json
data/locales/: en.json
scripts/: build-macos.sh  build-msvc.bat  pack-linux.sh  pack-macos.sh
src/: main.cpp
src/assets/: asset.cpp  asset.h  assetimage.cpp  assetimage.h  assetmanager.cpp  assetmanager.h  assetmanager_process.cpp  assetmanager_scan.cpp  assetpalette.cpp  assetpalette.h  container.cpp  container.h  containerdir.cpp  containerdir.h  containerwd.cpp  containerwd.h  loader.cpp  loader.h  manager.cpp  manager.h
src/core/: common.h  config-placeholder.h  config.h  errorpossible.cpp  errorpossible.h  file.cpp  file.h  game.cpp  game.h  log.cpp  log.h  luavm.cpp  luavm.h  macros.h  main.cpp  timer.h  types.h  utils.cpp  utils.h  window.cpp  window.h
src/core/graphics/: image.cpp  image.h  palette.cpp  palette.h  texture.cpp  texture.h  window.cpp  window.h
src/core/io/: file.h
src/core/math/: rectangle.cpp  rectangle.h  vector2.cpp  vector2.h
src/engine/assets/: asset.cpp  asset.h  asset_image.cpp  asset_image.h  asset_level.cpp  asset_level.h  asset_manager.cpp  asset_manager.h  asset_palette.cpp  asset_palette.h  asset_processor.cpp  asset_processor.h  asset_world.cpp  asset_world.h  assetimage.h  assetmanager.cpp  assetmanager.h  assetmanager_process.cpp  assetmanager_scan.cpp  assetpalette.cpp  assetpalette.h  iassetprocessor.cpp  iassetprocessor.h
src/engine/core/: build_config_placeholder.h  common.h  config_placeholder.h  engine.cpp  engine.h  error_possible.cpp  error_possible.h  errorpossible.cpp  errorpossible.h  game.cpp  game.h  luavm.cpp  luavm.h  macros.h  main.cpp  priority_queue.h  to_string.h  tree_printable.h  types.h  utils.cpp  utils.h
src/engine/entities/: entity_config.cpp  entity_config.h  entity_factory.cpp  entity_factory.h  entity_manager.cpp  entity_manager.h
src/engine/graphics/: animation.cpp  animation.h  color.h  image.cpp  image.h  palette.cpp  palette.h  renderer.cpp  renderer.h  renderer_shaders.h  window.cpp  window.h
src/engine/gui/: event_handler.cpp  eventhandler.cpp  gui_menu.cpp  gui_menu.h  gui_root.cpp  gui_root.h  gui_view.cpp  gui_view.h  guimenu.cpp  guimenu.h  guiview.cpp  guiview.h  locale.cpp  locale.h  overlay.h  selection_overlay.cpp  selection_overlay.h
src/engine/gui/game/: camera_view.cpp  camera_view.h  gui_game_root.cpp  gui_game_root.h  selection_overlay.cpp  selection_overlay.h  sidebar.cpp  sidebar.h  simulation_view.cpp  simulation_view.h
src/engine/io/: config.cpp  config.h  event_dispatcher.cpp  event_dispatcher.h  event_handler.cpp  event_handler.h  event_listener.cpp  event_listener.h  file.cpp  file.h  has_config_data.h  log.cpp  log.h  timer.cpp
src/engine/math/: number.cpp  number.h  rectangle.cpp  rectangle.h  vector2.cpp  vector2.h
src/engine/simulation/: component.h  entity.cpp  entity.h  entity_config.h  entity_store.cpp  entity_store.h  faction.cpp  faction.h  player.cpp  player.h  simulation.cpp  simulation.h  simulation_parameters.h  tile.cpp  tile.h  world.cpp  world.h  world_prototypes.h
src/engine/simulation/components/: animation_component.cpp  animation_component.h  attachment_component.cpp  attachment_component.h  component.h  energy_component.cpp  energy_component.h  faction_component.cpp  faction_component.h  image_component.cpp  image_component.h  image_group_component.cpp  image_group_component.h  image_groups_component.h  player_component.cpp  player_component.h  power_component.cpp  power_component.h  rotation_component.cpp  rotation_component.h
src/engine/simulation/entities/: entity.cpp  entity.h  entity_config.cpp  entity_config.h  entity_factory.cpp  entity_factory.h  entity_manager.cpp  entity_manager.h  movable.cpp  movable.h
src/engine/simulation/enviroment/: entity_prototype.cpp  entity_prototype.h  tile.cpp  tile.h  world.cpp  world.h  world_prototypes.h
src/engine/simulation/pathfinder/: astar.cpp  astar.h  astar_comparator.cpp  astar_comparator.h  path_handler.cpp  path_handler.h  path_request.cpp  path_request.h  path_state.h  path_vertex.h
src/engine/simulation/world/: tile.cpp  tile.h  world.cpp  world.h  (+1 more)
src/entities/: entity.cpp  entity.h
src/enviroment/: tile.h  world.cpp  world.h
src/game/assets/: asset_level_game.cpp  asset_level_game.h  asset_processor_datpal.cpp  asset_processor_datpal.h  asset_processor_fixes.cpp  asset_processor_fixes.h  asset_processor_level.cpp  asset_processor_level.h  asset_processor_mix.cpp  asset_processor_mix.h  asset_processor_wd.cpp  asset_processor_wd.h  asset_world_level.cpp  asset_world_level.h  gameassetprocessor.cpp  gameassetprocessor.h  palette_indexes.h
src/game/components/: building_component.cpp  building_component.h  movement_component.cpp  movement_component.h  palette_component.cpp  palette_component.h  palette_setup_component.h  player_component.h  player_palette_component.h  sprite_damage_component.cpp  sprite_damage_component.h  sprite_rotation_component.cpp  sprite_rotation_component.h
src/game/core/: constants.h  game.cpp  game.h  main.cpp
src/game/entities/: attachment.cpp  attachment.h  building.cpp  building.h  factories.h  object.cpp  object.h  static_object.cpp  static_object.h  unit.cpp  unit.h
src/game/gui/: game_layout.h  sidebar.cpp  sidebar.h
src/game/io/: event_listener_camera.cpp  event_listener_camera.h  event_listener_debug.cpp  event_listener_debug.h  ui_event_listener.cpp  ui_event_listener.h
src/graphics/: color.h  image.cpp  image.h  ipalette.cpp  ipalette.h  palette.cpp  palette.h  renderer.cpp  renderer.h  renderer_shaders.h  window.cpp  window.h
src/gui/: eventhandler.cpp  eventhandler.h
src/io/: file.cpp  file.h  log.cpp  log.h
src/math/: rectangle.cpp  rectangle.h  vector2.cpp  vector2.h
src/simulation/entities/: entity.h
src/simulation/enviroment/: tile.h  world.h
